<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FourierConfigure"
    android:padding="@dimen/fragments_padding"
    android:orientation="vertical"
    android:id="@+id/fourier_configure">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_number_of_modes"
            style="@style/configure_text_style"
            android:text="@string/parameter_number_of_modes" />

        <ImageView
            android:id="@+id/btn_help_number_of_modes"
            android:layout_toRightOf="@id/text_number_of_modes"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_number_of_modes"
            android:layout_toLeftOf="@id/btn_error_number_of_modes"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_number_of_modes"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_number_of_harmonics"
            style="@style/configure_text_style"
            android:text="@string/parameter_number_of_harmonics" />

        <ImageView
            android:id="@+id/btn_help_number_of_harmonics"
            android:layout_toRightOf="@id/text_number_of_harmonics"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_number_of_harmonics"
            android:layout_toLeftOf="@id/btn_error_number_of_harmonics"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_number_of_harmonics"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_period_of_approximation"
            style="@style/configure_text_style"
            android:text="@string/parameter_period_of_approximation" />

        <ImageView
            android:id="@+id/btn_help_period_of_approximation"
            android:layout_toRightOf="@id/text_period_of_approximation"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_period_of_approximation"
            android:layout_toLeftOf="@id/btn_error_period_of_approximation"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_period_of_approximation"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_predicted_bars"
            style="@style/configure_text_style"
            android:text="@string/parameter_predicted_bars" />

        <ImageView
            android:id="@+id/btn_help_predicted_bars"
            android:layout_toRightOf="@id/text_predicted_bars"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_predicted_bars"
            android:layout_toLeftOf="@id/btn_error_predicted_bars"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_predicted_bars"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_min_periods"
            style="@style/configure_text_style"
            android:text="@string/parameter_min_periods" />

        <ImageView
            android:id="@+id/btn_help_min_periods"
            android:layout_toRightOf="@id/text_min_periods"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_min_periods"
            android:layout_toLeftOf="@id/btn_error_min_periods"
            style="@style/configure_edit_style"
            android:inputType="numberDecimal"/>

        <ImageView
            android:id="@+id/btn_error_min_periods"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_max_periods"
            style="@style/configure_text_style"
            android:text="@string/parameter_max_periods" />

        <ImageView
            android:id="@+id/btn_help_max_periods"
            android:layout_toRightOf="@id/text_max_periods"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_max_periods"
            android:layout_toLeftOf="@id/btn_error_max_periods"
            style="@style/configure_edit_style"
            android:inputType="numberDecimal"/>

        <ImageView
            android:id="@+id/btn_error_max_periods"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_period_step"
            style="@style/configure_text_style"
            android:text="@string/parameter_period_step" />

        <ImageView
            android:id="@+id/btn_help_period_step"
            android:layout_toRightOf="@id/text_period_step"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_period_step"
            android:layout_toLeftOf="@id/btn_error_period_step"
            style="@style/configure_edit_style"
            android:inputType="numberDecimal"/>

        <ImageView
            android:id="@+id/btn_error_period_step"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_amplitude_steps"
            style="@style/configure_text_style"
            android:text="@string/parameter_amplitude_steps" />

        <ImageView
            android:id="@+id/btn_help_amplitude_steps"
            android:layout_toRightOf="@id/text_amplitude_steps"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_amplitude_steps"
            android:layout_toLeftOf="@id/btn_error_amplitude_steps"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_amplitude_steps"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_phase_step"
            style="@style/configure_text_style"
            android:text="@string/parameter_phase_step" />

        <ImageView
            android:id="@+id/btn_help_phase_step"
            android:layout_toRightOf="@id/text_phase_step"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_phase_step"
            android:layout_toLeftOf="@id/btn_error_phase_step"
            style="@style/configure_edit_style"
            android:inputType="numberDecimal"/>

        <ImageView
            android:id="@+id/btn_error_phase_step"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_high_freq_filter"
            style="@style/configure_text_style"
            android:text="@string/parameter_high_freq_filter" />

        <ImageView
            android:id="@+id/btn_help_high_freq_filter"
            android:layout_toRightOf="@id/text_high_freq_filter"
            style="@style/configure_help_style"/>

        <EditText
            android:id="@+id/edit_high_freq_filter"
            android:layout_toLeftOf="@id/btn_error_high_freq_filter"
            style="@style/configure_edit_style"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/btn_error_high_freq_filter"
            style="@style/configure_error_style"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_dynamic_approximation"
            style="@style/configure_text_style"
            android:text="@string/parameter_dynamic_approximation" />

        <ImageView
            android:id="@+id/btn_help_dynamic_approximation"
            android:layout_toRightOf="@id/text_dynamic_approximation"
            style="@style/configure_help_style"/>

        <CheckBox
            android:id="@+id/dynamic_approximation_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="32dp"
            android:text="" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_set_default_back"
            style="@style/btn_default_style"
            android:background="@drawable/set_default_anim_border"
            android:clickable="true"
            android:alpha="1.0"
            android:textColor="@color/get_started_clicked"
            android:text="@string/text_set_default" />

        <TextView
            android:id="@+id/btn_set_default"
            style="@style/btn_default_style"
            android:background="@drawable/get_started_border"
            android:clickable="true"
            android:textColor="@color/get_started"
            android:text="@string/text_set_default" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>